--- a/.env
+++ b/.env
@@ -15,5 +15,24 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=d28ab7c2f3a0a657a4244ee553d056a5
+APP_SECRET=7f0fed56e967b81b9e5325b4141a71e4
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+
+FORWARD_DATABASE_PORT=5432
+POSTGRES_VERSION=14
+POSTGRES_DB=app
+POSTGRES_PASSWORD=ChangeMe
+POSTGRES_USER=symfony
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database:5432/${POSTGRES_DB}?serverVersion=${POSTGRES_VERSION}&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+HTTP_PORT=80
+HTTPS_PORT=443
+HTTP3_PORT=443
