--- a/composer.json
+++ b/composer.json
@@ -73,5 +73,8 @@
         "runtime": {
             "dotenv_overload": true
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.43"
     }
 }
