--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "symfony/dotenv": "*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "*",
+        "symfony/property-info": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "*",
+        "symfony/validator": "6.1.*",
         "symfony/yaml": "*"
     },
     "config": {
