--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "symfony/dotenv": "*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "*",
+        "symfony/password-hasher": "6.1.*",
         "symfony/property-info": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "*",
+        "symfony/security-bundle": "6.1.*",
         "symfony/validator": "6.1.*",
         "symfony/yaml": "*"
     },
@@ -77,6 +79,8 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "fzaninotto/faker": "^1.5",
         "symfony/maker-bundle": "^1.43"
     }
 }
